# Yebelo-Technologies-assignment-1

./: .gitignore  README.md  docker-compose.yml  package-lock.json  trades_data.csv
ingest/: ingest.js  package-lock.json  package.json
kafka-scripts/: consume_rsi.js
next-dashboard/: package-lock.json  package.json
next-dashboard/.next/: trace
next-dashboard/.next/cache/webpack/client-development/: index.pack.gz.old
next-dashboard/.next/cache/webpack/server-development/: index.pack.gz.old
next-dashboard/.next/server/: _error.js
next-dashboard/.next/server/pages/: _error.js  index.js
next-dashboard/.next/server/vendor-chunks/: @swc.js  next.js  recharts.js
next-dashboard/.next/static/chunks/: _error.js  webpack.js
next-dashboard/.next/static/chunks/pages/: index.js
next-dashboard/.next/static/webpack/: webpack.ae7f365a67aefbe7.hot-update.js  webpack.b50bb821367ee9b5.hot-update.js  webpack.da594b6932b26b2b.hot-update.js
next-dashboard/.next/static/webpack/pages/: index.da594b6932b26b2b.hot-update.js
next-dashboard/src/components/: RsiLive.tsx
next-dashboard/src/pages/: index.tsx
rsi-broadcaster/: package-lock.json  package.json  server.js
rsi-service/: Cargo.toml
rsi-service/src/: main.rs
