[package]
name = "rsi-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rdkafka = { version = "0.29", features = ["tokio-runtime", "cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
